--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -1,6 +1,7 @@
 body {
   width: 100vw;
   height: 100vh;
+  margin: 0;
 }
 #root {
   width: 100%;
@@ -15,4 +16,42 @@ body {
   
 }
 
+/* Navbar */
 
+.navbar {
+  width: 96px;
+  height: 100%;
+  background-color: #161D2F;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.categories {
+  display: flex;
+  
+}
+
+.category-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.logo {
+  padding: 20px;
+}
+
+.profile {
+  padding: 20px;
+}
+
+#pfp {
+  border: 2px solid white;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+}
