--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   width: 100vw;
   height: 100vh;
@@ -28,9 +32,15 @@ body {
   justify-content: space-between;
 }
 
+.top {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
 .categories {
   display: flex;
-  
+  justify-content: center; 
 }
 
 .category-list {
@@ -38,7 +48,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 20px;
 }
 
 .logo {
