--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -2,29 +2,26 @@
   margin: 0;
   padding: 0;
 }
-body {
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
-}
-#root {
-  width: 100%;
-  height: 100%;
-}
+
 
 .App {
   color: black;
   background-color: #10141E;
-  width: 100%;
-  height: 100%;
-  
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
 }
 
 /* Navbar */
 
 .navbar {
   width: 96px;
-  height: 100%;
+  margin: 20px;
+  height: 95%;
+  border-radius: 15px;
+  
   background-color: #161D2F;
   display: flex;
   flex-direction: column;
