--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -112,3 +112,14 @@ top: calc(50% - 30px/2);
 
 /* Trending */
 
+.bookmark {
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  width: 32px;
+  height: 32px;
+  padding:20px;
+  border-radius:50%;
+  border:none;
+  background-color: rgba(0,0,0,.5);
+}
