--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -161,3 +161,20 @@ top: calc(50% - 30px/2);
   }
 
   /* Close Button */
+
+  .close {
+    color: #FFFFFF;
+    border: none;
+    background-color: #2d3c61;
+    width: 40px;
+    height: 40px;
+    
+    border-radius: 50%;
+  }
+
+  /* hide */
+
+  .hidden {
+   
+    visibility: hidden
+  }
